--- a/app/components/about/AboutSection1.module.css
+++ b/app/components/about/AboutSection1.module.css
@@ -5,6 +5,7 @@
   background-image: url("../../../public/home/about-bg.png");
   background-position: right top;
   background-repeat: no-repeat;
+  padding-bottom: 0;
 }
 .AboutSection1Row {
   display: flex;
