--- a/app/components/about/ScrollingGallery.module.css
+++ b/app/components/about/ScrollingGallery.module.css
@@ -2,7 +2,6 @@
 
 .container {
   overflow: hidden;
-  padding: 20px;
   width: 100%;
   height: auto;
 }
