--- a/app/components/atmac/AtmaChapterSection2.module.css
+++ b/app/components/atmac/AtmaChapterSection2.module.css
@@ -1,7 +1,7 @@
 .AtmaChapterSection2 {
   position: relative;
   padding: clamp(60px, 7vh, 7vh) 0;
-  background-color: var(--background);
+  background-color: var(--background-1);
 }
 .AtmaChapterSection2Row {
   display: grid;
