--- a/app/components/gallery/GalleryMain.module.css
+++ b/app/components/gallery/GalleryMain.module.css
@@ -2,6 +2,7 @@
   position: relative;
   padding: clamp(60px, 7vh, 7vh) 0;
   background-color: var(--color-white);
+  padding-top: 0;
 }
 
 .tabs {
